--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ staff_health_data.csv
 staff_health_data(1).csv
 code_consolidate.ipynb
 healthmeasure_visualcategory_df.ipynb
+overall-health-data.ipynb
