--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ reports
 Dockerfile
 docker-compose.yml
 staff_health_data.csv
-staff_health_data(1).csv
+staff_health_data_kiosk.csv
 code_consolidate.ipynb
 healthmeasure_visualcategory_df.ipynb
 overall-health-data.ipynb
